--- a/浏览器/news.html
+++ b/浏览器/news.html
@@ -25,18 +25,18 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#ad-carousel">首页</a></li>
+                    <li class="active"><a href="#ad-carousel" onclick="window.location='./index.html'">首页</a></li>
                     <li id="company-sever"><a href="#">企业服务<span class="caret"></span></a>
                         <div class="nav_service_list">
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/social_security.png" alt="">
                                     <div class="nav_service_item_title">社保服务<p>全国109城直营网点</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/canbaojing.png" alt="">
                                     <div class="nav_service_item_title">残保金<p>残保金一站式解决方案</p>
                                     </div>
@@ -44,14 +44,14 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/salary_services.png" alt="">
                                     <div class="nav_service_item_title">薪酬服务<p>统一服务费10元/人次起</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/all_ensure.png" alt="">
                                     <div class="nav_service_item_title">综合保障
                                         <p>补充医疗/补充工伤</p>
@@ -60,7 +60,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/xinshuibao.png" alt="">
                                     <div class="nav_service_item_title">薪税保<sup>®</sup>
                                         <p>人资综合代理服务</p>
@@ -69,7 +69,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/relation.png" alt="">
                                     <div class="nav_service_item_title">用工关系解决方案
                                         <p>激活企业用工自主权</p>
@@ -78,7 +78,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
+                                <a class="nav_service_item" href="#" onclick="window.location='./comService.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/income_all.png" alt="">
                                     <div class="nav_service_item_title">收入结算<p>共享经济收入结算</p>
                                     </div>
@@ -89,14 +89,16 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">个人服务 <span class="caret"></span></a>
                         <ul class="dropdown-menu drop-width" role="menu">
-                            <li><a href="#feature-tab" data-tab="tab-chrome" onclick="window.location='./index3.html'">社保</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-firefox" onclick="window.location='./index3.html'">综合保障</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-safari" onclick="window.location='./index3.html'">残保金</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-opera" onclick="window.location='./index3.html'">Opera</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-ie" onclick="window.location='./index3.html'">IE</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-chrome" onclick="window.location='./perService.html'">社保</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-firefox" onclick="window.location='./perService.html'">综合保障</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-safari" onclick="window.location='./perService.html'">残保金</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-opera" onclick="window.location='./perService.html'">Opera</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-ie" onclick="window.location='./perService.html'">IE</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" data-toggle="modal" data-target="#about-modal">关于我们</a></li>
+                    <li class="active"><a href="#" onclick="window.location='./news.html'">社保咨询</a></li>
+                    <li><a href="#" onclick="window.location='./goodBox.html'">保叔百宝箱</a></li>
+                    <li><a href="#" onclick="window.location='./aboutUs.html'">关于我们</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="contact"><a href="#"><img class="icon-tel" src="./img/icon-tel.png" />4009-988-988</a></li>
@@ -117,10 +119,10 @@
         <!-- 资讯选项 -->
         <div class="tab_list">
             <ul>
-                <li><a href="#">最新活动</a></li>
-                <li><a href="#">行业报告</a></li>
-                <li><a href="#">干货资讯</a></li>
-                <li><a href="#" style="color:red">媒体报道</a></li>
+                <li><a class="col-red" href="#">社保新政</a></li>
+                <li><a href="#">社保申报</a></li>
+                <li><a href="#">社保缴费</a></li>
+                <li><a href="#">社保断缴</a></li>
             </ul>
         </div>
     </div>
@@ -199,44 +201,44 @@
                 </li>
             </ul>
             <ul class="news_ul">
-                    <li>
-                        <dl class="news_summary">
-                            <dd class="news_title_noimg">
-                                <a href="/news/report/detail-47">51社保代表出席政协海南省七届二次会议 为互联网企业发展建言献策
-                                </a>
-                            </dd>
-                            <dd class="news_con_noimg">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
-                                <a href="/news/report/detail-47">查看详情 &gt;</a>
-                            </dd>
-                            <dd class="news_date_noimg">2019/01/25</dd>
-                        </dl>
-                    </li>
-                    <li>
-                        <dl class="news_summary">
-                            <dd class="news_title_noimg">
-                                <a href="/news/report/detail-46">51社保技术 VP丁学被聘为2019中国智能制造百人会专家
-                                </a>
-                            </dd>
-                            <dd class="news_con_noimg">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
-                                <a href="/news/report/detail-46">查看详情 &gt;</a>
-                            </dd>
-                            <dd class="news_date_noimg">2019/01/11</dd>
-                        </dl>
-                    </li>
-                    <li>
-                        <dl class="news_summary">
-                            <dd class="news_title_noimg">
-                                <a href="/news/report/detail-45">革薪时代薪趋势——政策变革下的薪酬福利思维变革
-                                </a>
-                            </dd>
-                            <dd class="news_con_noimg">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
-                                本次高峰论坛由51社保和优咖学院独家冠名，同路、同窗、好社保和 HRSAY 协办，HR实名俱乐部和 HR合伙人大学合作支持。
-                                <a href="/news/report/detail-45">查看详情 &gt;</a>
-                            </dd>
-                            <dd class="news_date_noimg">2018/12/27</dd>
-                        </dl>
-                    </li>
-                </ul>
+                <li>
+                    <dl class="news_summary">
+                        <dd class="news_title_noimg">
+                            <a href="/news/report/detail-47">51社保代表出席政协海南省七届二次会议 为互联网企业发展建言献策
+                            </a>
+                        </dd>
+                        <dd class="news_con_noimg">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
+                            <a href="/news/report/detail-47">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date_noimg">2019/01/25</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl class="news_summary">
+                        <dd class="news_title_noimg">
+                            <a href="/news/report/detail-46">51社保技术 VP丁学被聘为2019中国智能制造百人会专家
+                            </a>
+                        </dd>
+                        <dd class="news_con_noimg">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
+                            <a href="/news/report/detail-46">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date_noimg">2019/01/11</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl class="news_summary">
+                        <dd class="news_title_noimg">
+                            <a href="/news/report/detail-45">革薪时代薪趋势——政策变革下的薪酬福利思维变革
+                            </a>
+                        </dd>
+                        <dd class="news_con_noimg">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
+                            本次高峰论坛由51社保和优咖学院独家冠名，同路、同窗、好社保和 HRSAY 协办，HR实名俱乐部和 HR合伙人大学合作支持。
+                            <a href="/news/report/detail-45">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date_noimg">2018/12/27</dd>
+                    </dl>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
@@ -320,6 +322,7 @@
 </div>
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/dayjs/1.8.15/dayjs.min.js"></script>
 <script>
     $(function () {
         // 回到顶部
@@ -334,6 +337,34 @@
                 contact.removeClass('dis-block')
             }
         });
+        let allList = $('.tab_list ul li')
+        let news_ul = $('.news_inner .news_ul')
+        let index = 0
+        allList.click(function(){
+            index = $(this).index()
+            allList.eq(index).children().addClass('col-red').parent().siblings().children().removeClass('col-red');
+        })
+        $.ajax({
+            url: 'http://resourceapi.jjshebao.com/apiUcont/v20/resource/contentPlatform/personalContent/wx27d40c8111f9af87',
+            data: JSON.stringify({
+                cateChildId: "2c922d136a58f482016a59074817002f",
+                cateId: "pers",
+                pageNo: 5,
+                provinceNo: "350000",
+                uid: "7e696f4ca249c4fc344a8525f6b9d0737ac93ac8302c680396ea4d29e6c557fb"
+            }),
+            contentType:'application/json;charset=utf-8',
+            type: 'post',
+            dataType: 'json',
+            success: function(data){
+                console.log(data.resultBody)
+            },
+            fail: function (error) {
+                console.log(error)
+            }
+        })
+        // dayjs设置时间
+        // let time = dayjs(6234123513453).format('YYYY-MM-DD')
     })
 </script>
 </body>
